--- a/package.json
+++ b/package.json
@@ -5,25 +5,35 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.8.2",
     "cors": "^2.8.5",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
     "node-sass": "^4.14.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
+    "babel-jest": "^25.4.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "dotenv": "^8.2.0",
     "husky": "^4.2.5",
+    "jest": "^25.4.0",
     "prettier": "2.0.5",
     "pretty-quick": "^2.0.1",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "husky": {
