--- a/package.json
+++ b/package.json
@@ -13,19 +13,26 @@
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.8.2",
     "cors": "^2.8.5",
+    "form-data": "^3.0.0",
+    "formidable": "^1.2.2",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.15",
     "next": "9.3.5",
     "node-sass": "^4.14.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
+    "@types/formidable": "^1.0.31",
+    "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
+    "@types/unzipper": "^0.10.3",
     "babel-jest": "^25.4.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "dotenv": "^8.2.0",
