--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-sass": "^4.14.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "unzipper": "^0.10.11"
+    "unzipper": "^0.10.11",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.5",
@@ -33,6 +34,7 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/unzipper": "^0.10.3",
+    "@types/xml2js": "^0.4.5",
     "babel-jest": "^25.4.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "dotenv": "^8.2.0",
