--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formidable": "^1.2.2",
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
+    "mongodb": "^3.5.7",
     "next": "9.3.5",
     "node-sass": "^4.14.0",
     "react": "16.13.1",
@@ -31,6 +32,7 @@
     "@testing-library/react": "^10.0.3",
     "@types/formidable": "^1.0.31",
     "@types/lodash": "^4.14.150",
+    "@types/mongodb": "^3.5.14",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/unzipper": "^0.10.3",
