--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 DASHBOARD_API_URL=http://localhost:3000/results
 MONGO_URL=mongodb://root:helloworld@localhost:27017
 MONGO_DB_NAME=stability-dev
+SECRET=some secret key
