--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.9.4",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
+    "@types/cors": "^2.8.6",
     "@types/formidable": "^1.0.31",
     "@types/lodash": "^4.14.150",
     "@types/mongodb": "^3.5.14",
