--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,6 @@ services:
     restart: always
     ports:
       - 127.0.0.1:27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=helloworld
