spike in the slack notif

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,4 @@ DASHBOARD_API_URL=http://localhost:3000/results
 MONGO_URL=mongodb://root:helloworld@localhost:27017
 MONGO_DB_NAME=stability-dev
 SECRET=some secret key
+SLACK_WEBHOOK=https://hooks.slack.com/services/...
