--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bulma": "^0.8.2",
     "cors": "^2.8.5",
